--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,5 @@
 {
-  "presets": [
-    "es2015",
-    "react"
-  ],
+  "presets": ["es2015", "react"],
   "plugins": [
     "add-module-exports",
     "transform-class-properties",
@@ -11,14 +8,10 @@
   ],
   "env": {
     "development": {
-      "plugins": [
-        "flow-react-proptypes"
-      ]
+      "plugins": ["flow-react-proptypes"]
     },
     "production": {
-      "plugins": [
-        "transform-react-remove-prop-types"
-      ]
+      "plugins": ["transform-react-remove-prop-types"]
     }
   }
 }
