--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "react-tabtab",
-  "version": "2.0.0",
+  "name": "@hlolli/react-tabtab",
+  "version": "2.1.0",
   "description": "A mobile support, draggable, editable and api based Tab for ReactJS",
-  "main": "lib/",
+  "main": "dist/react-tabtab.min.js",
   "scripts": {
     "start": "node devServer.js",
     "build": "npm run build:lib && npm run build:dist",
@@ -16,7 +16,6 @@
     "gh-pages": "rimraf _gh-pages && npm run gh-pages:build && npm run gh-pages:publish",
     "gh-pages:build": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js",
     "gh-pages:publish": "git-directory-deploy --directory _gh-pages --branch gh-pages",
-    "prepublish": "npm run build",
     "validate": "npm ls"
   },
   "repository": {
@@ -47,82 +46,69 @@
   },
   "homepage": "https://github.com/ctxhou/react-tabtab#readme",
   "dependencies": {
-    "classnames": "^2.2.5",
-    "invariant": "^2.2.2",
-    "prop-types": "^15.6.0",
-    "react-poppop": "^1.5.0",
-    "react-sortable-hoc": "^0.6.8",
-    "react-test-renderer": "^16.0.0"
+    "array-move": "^3.0.1",
+    "invariant": "^2.2.4",
+    "react-test-renderer": "^16.13.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.14.0",
-    "babel-eslint": "^7.2.3",
-    "babel-jest": "^20.0.3",
-    "babel-loader": "^7.0.0",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-dynamic-import-webpack": "^1.0.1",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-plugin-flow-react-proptypes": "^9.0.0",
-    "babel-plugin-transform-class-properties": "^6.16.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-react": "^7.10.4",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.10",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-flow": "^6.23.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-runtime": "^6.11.6",
-    "compression-webpack-plugin": "^1.0.1",
-    "cross-env": "^5.1.1",
-    "enzyme": "^3.7.0",
-    "enzyme-adapter-react-15": "^1.0.5",
-    "enzyme-adapter-react-16": "^1.13.1",
-    "enzyme-to-json": "^3.2.2",
-    "eslint": "^4.0.0",
-    "eslint-config-google": "^0.4.0",
-    "eslint-config-prettier": "^2.6.0",
-    "eslint-plugin-flowtype": "^2.39.1",
-    "eslint-plugin-flowtype-errors": "^3.3.6",
-    "eslint-plugin-jest": "^21.2.0",
-    "eslint-plugin-prettier": "^2.3.1",
-    "eslint-plugin-react": "^7.5.1",
-    "extract-text-webpack-plugin": "^3.0.1",
-    "flow-bin": "^0.58.0",
-    "flow-watch": "^1.1.4",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "compression-webpack-plugin": "^6.0.2",
+    "cross-env": "^7.0.2",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-15": "^1.4.2",
+    "enzyme-adapter-react-16": "^1.15.4",
+    "enzyme-to-json": "^3.5.0",
+    "eslint": "^7.9.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-flowtype": "^5.2.0",
+    "eslint-plugin-flowtype-errors": "^4.3.0",
+    "eslint-plugin-jest": "^24.0.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.6",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "flow-bin": "^0.134.0",
+    "flow-watch": "^2.0.0",
     "git-directory-deploy": "^1.5.1",
-    "html-webpack-plugin": "^2.30.1",
-    "husky": "^0.14.3",
-    "jest": "^20.0.4",
-    "jest-styled-components": "^6.3.0",
-    "noop3": "^999.999.999",
+    "html-webpack-plugin": "^4.4.1",
+    "husky": "^4.3.0",
+    "jest": "^26.4.2",
+    "jest-styled-components": "^7.0.3",
+    "noop3": "^1000.0.0",
     "precommit-hook-eslint": "^3.0.0",
-    "prettier": "^1.7.4",
-    "react": ">=16.3.0",
-    "react-content-loader": "^3.1.1",
-    "react-dom": ">=16.3.0",
-    "react-icons": "^2.2.7",
-    "react-select": "^1.0.0-rc.10",
-    "rimraf": "^2.6.2",
-    "rollup": "^0.52.1",
-    "rollup-plugin-babel": "^3.0.1",
-    "rollup-plugin-commonjs": "^8.2.6",
+    "prettier": "^2.1.2",
+    "react-content-loader": "^5.1.1",
+    "react-icons": "^3.11.0",
+    "react-select": "^3.1.0",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.27.1",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-flow": "^1.1.1",
-    "rollup-plugin-json": "^2.3.0",
-    "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-replace": "^2.0.0",
-    "rollup-plugin-uglify": "^2.0.1",
-    "rollup-plugin-visualizer": "^0.3.1",
-    "styled-components": "^4.0.0",
-    "webpack": "^3.3.0",
-    "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-dev-middleware": "^1.12.0",
-    "webpack-hot-middleware": "^2.18.2"
+    "rollup-plugin-json": "^4.0.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-replace": "^2.2.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-uglify": "^6.0.4",
+    "rollup-plugin-visualizer": "^4.1.1",
+    "webpack": "^4.44.2",
+    "webpack-bundle-analyzer": "^3.9.0",
+    "webpack-dev-middleware": "^3.7.2",
+    "webpack-hot-middleware": "^2.25.0"
   },
   "peerDependencies": {
-    "react": ">= 16.3.0 < 17.0.0-0",
-    "styled-components": "^4.0.0"
+    "classnames": "^2.2.6",
+    "prop-types": "^15.7.2",
+    "react": "^16.13.1",
+    "react-dom": ">=16.13.1",
+    "react-poppop": "^1.5.0",
+    "react-sortable-hoc": "^1.11.0",
+    "styled-components": "^5.2.0"
   },
   "jest": {
     "setupFiles": [
