--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,10 @@
 {
-  "presets": ["es2015", "react"],
+  "presets": ["@babel/preset-env", "@babel/preset-react"],
   "plugins": [
     "add-module-exports",
+    "transform-flow-strip-types",
     "transform-class-properties",
-    "transform-object-rest-spread",
-    "transform-flow-strip-types"
+    "@babel/plugin-proposal-object-rest-spread"
   ],
   "env": {
     "development": {
