--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "@hlolli/react-tabtab",
-  "version": "2.1.1",
+  "version": "3.0.0",
   "description": "A mobile support, draggable, editable and api based Tab for ReactJS",
   "main": "lib/",
+  "type": "module",
+  "exports": {
+    ".": "./lib/index.js"
+  },
   "scripts": {
     "start": "node devServer.js",
-    "build": "npm run build:lib && npm run build:dist",
-    "build:lib": "rimraf ./lib && cross-env BABEL_ENV=production babel src -d lib",
-    "build:dist": "rimraf dist && rollup -c --environment ESBUNDLE && rollup -c --environment PRODUCTION",
+    "build": "rimraf ./lib && cross-env BABEL_ENV=production babel src -d lib",
     "lint": "eslint src example test",
     "test": "jest",
     "test:watch": "NODE_ENV=test npm test -- --watch",
@@ -32,13 +34,7 @@
     "tabtab",
     "styled-components"
   ],
-  "files": [
-    "dist",
-    "docs",
-    "flow-typed",
-    "lib",
-    "src"
-  ],
+  "files": ["dist", "docs", "flow-typed", "lib", "src"],
   "author": "ctxhou",
   "license": "MIT",
   "bugs": {
@@ -46,65 +42,54 @@
   },
   "homepage": "https://github.com/ctxhou/react-tabtab#readme",
   "dependencies": {
-    "array-move": "^3.0.1",
+    "array-move": "^4.0.0",
     "invariant": "^2.2.4",
-    "react-test-renderer": "^16.13.1"
+    "react-test-renderer": "^18.2.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.11.6",
-    "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
+    "@babel/cli": "^7.19.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.19.4",
     "@babel/polyfill": "^7.11.5",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-react": "^7.10.4",
-    "babel-loader": "^8.1.0",
+    "@babel/preset-env": "^7.19.4",
+    "@babel/preset-react": "^7.18.6",
+    "babel-loader": "^8.2.5",
     "babel-plugin-add-module-exports": "^1.0.4",
     "babel-plugin-flow-react-proptypes": "^26.0.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-    "compression-webpack-plugin": "^6.0.2",
-    "cross-env": "^7.0.2",
+    "compression-webpack-plugin": "^10.0.0",
+    "cross-env": "^7.0.3",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-15": "^1.4.2",
-    "enzyme-adapter-react-16": "^1.15.4",
-    "enzyme-to-json": "^3.5.0",
-    "eslint": "^7.9.0",
+    "enzyme-adapter-react-15": "^1.4.3",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "enzyme-to-json": "^3.6.2",
+    "eslint": "^8.25.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-flowtype": "^5.2.0",
-    "eslint-plugin-flowtype-errors": "^4.3.0",
-    "eslint-plugin-jest": "^24.0.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.20.6",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-flowtype": "^8.0.3",
+    "eslint-plugin-flowtype-errors": "^4.5.0",
+    "eslint-plugin-jest": "^27.1.3",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.10",
     "extract-text-webpack-plugin": "^3.0.2",
-    "flow-bin": "^0.134.0",
+    "flow-bin": "^0.190.0",
     "flow-watch": "^2.0.0",
     "git-directory-deploy": "^1.5.1",
-    "html-webpack-plugin": "^4.4.1",
-    "jest": "^26.4.2",
-    "jest-styled-components": "^7.0.3",
+    "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.2.1",
+    "jest-styled-components": "^7.1.1",
     "noop3": "^1000.0.0",
-    "precommit-hook-eslint": "^3.0.0",
-    "prettier": "^2.1.2",
-    "react-content-loader": "^5.1.1",
-    "react-icons": "^3.11.0",
-    "react-select": "^3.1.0",
+    "prettier": "^2.7.1",
+    "react-content-loader": "^6.2.0",
+    "react-icons": "^4.6.0",
+    "react-select": "^5.5.3",
     "rimraf": "^3.0.2",
-    "rollup": "^2.27.1",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-flow": "^1.1.1",
-    "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-uglify": "^6.0.4",
-    "rollup-plugin-visualizer": "^4.1.1",
-    "webpack": "^4.44.2",
-    "webpack-bundle-analyzer": "^3.9.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-middleware": "^3.7.2",
-    "webpack-hot-middleware": "^2.25.0"
+    "webpack": "^5.74.0",
+    "webpack-bundle-analyzer": "^4.6.1",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-middleware": "^5.3.3",
+    "webpack-hot-middleware": "^2.25.2"
   },
   "peerDependencies": {
     "classnames": "^2.2.6",
@@ -116,23 +101,12 @@
     "styled-components": "^5.2.0"
   },
   "jest": {
-    "setupFiles": [
-      "./test/shim",
-      "./test/enzyme-setup"
-    ],
-    "roots": [
-      "<rootDir>/test/"
-    ],
+    "setupFiles": ["./test/shim", "./test/enzyme-setup"],
+    "roots": ["<rootDir>/test/"],
     "unmockedModulePathPatterns": [
       "node_modules/react/",
       "node_modules/enzyme/"
     ],
-    "snapshotSerializers": [
-      "enzyme-to-json/serializer"
-    ]
-  },
-  "pre-commit": [
-    "lint",
-    "test"
-  ]
+    "snapshotSerializers": ["enzyme-to-json/serializer"]
+  }
 }
